# lance-mlx

./: .gitignore  BACKLOG.md  HANDOFF.md  README.md  pyproject.toml
Docs/: RUNPOD_PHASE0.md
Docs/DPM-vs-Euler/: README.md
notes/: L2_upstream_position_ids_audit.md  L3_checkerboard_vae_audit.md  perf_optimization_todos.md  phase1a_keys.md  phase1a_lance_3b_architecture.md  phase1a_lance_3b_keys_summary.md  phase1a_lance_3b_video_keys_summary.md  phase1b_converter_design.md  phase2.1b_oracle_lance_prompt.json  phase2.1b_parity_investigation.md  phase3.5_image_edit.md  phase5b_quantization_findings.md  phase5d_lance_vs_ltx_baseline.md  phase5e_research_brief.md  phase5j_THE_FIX.md
notes/phase5n_diagnostics/: D1_findings.md  D2_findings.md  D3_findings.md  D4_findings.md  D5_D6_findings.md  SUMMARY.md
notes/phase5n_diagnostics/d1c_real_prompt_frame_ab/: stats.md
notes/phase5n_diagnostics/d2_cfg_renorm/: summary.json
notes/phase5n_diagnostics/phase5c2_validation/: FINDINGS.md
notes/phase5n_diagnostics/phase5c3_awq_port/: .gitignore  PHASE_5C3_COMPLETE.md  STATUS.md
scripts/: 02_convert.py  08_t2i_demo.py  09_t2i_x2t_validate.py  10_t2v_demo.py  12_vae_roundtrip.py  13_image_edit_demo.py  14_x2t_video_demo.py  15_video_edit_demo.py  17_dwq_und_4bit.py  17_lance_vs_ltx_comparison.py  18_build_comparison_report.py  19_oracle_replay.py  25_gutcheck_phase5h.py  26_rocktalk_replay.py  27_watercolor_bisect.py  28_phase5j_pos_base_test.py  29_phase5j_scale_confirm.py  32_L3_noise_decode_audit.py  36_L2_upstream_replica.py  43_dpm_euler_ab_grid.py
scripts/diagnostics/: d1_vae_temporal_mode.py  d1b_vae_frame_indexing.py  d2_cfg_renorm_logger.py  d3_t2v_mape_anchor_sweep.py  d3b_t2v_mape_anchor_phase5j_scale.py  d4_pipeline_isolation.py  d5_num_frames_sweep.py  d6_position_ids_vs_lpe.py  d_p5c2_quick_full8bit_check.py  d_p5c2_validate.py  d_p5c3_awq_search_unit_test.py  d_p5c3_validate.py  d_p5c3f_x2t_sweep.py
scripts/quant/: apply_awq_quantize.py  calibrate_awq.py
src/lance_mlx/: __main__.py
src/lance_mlx/model/: mape.py
src/lance_mlx/pipeline/: image_edit.py  t2i.py  t2v.py  understanding.py  video_edit.py
src/lance_mlx/quant/: __init__.py  awq.py  calibrate.py
src/lance_mlx/scheduler/: __init__.py  (+1 more)
tests/: test_model_smoke.py  test_scheduler.py
(+3 files in other folders)
